--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/annuaire-ferme.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/annuaire-ferme.png" />
+   <!--  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/annuaire-ferme.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/annuaire-ferme.png" /> -->
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200..700&family=Passion+One:wght@400;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Tutorat</title>
+    <title>Tutorat - Plateforme de soutien </title>
   </head>
   <body>
     <div id="root"></div>
